--- a/app/assets/stylesheets/practices.scss
+++ b/app/assets/stylesheets/practices.scss
@@ -2,74 +2,104 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-h1 {
-  font-size: 20px !important;
+.l-wrap {
+  width: 100%;
+  height: 100%;
 }
 
-h2 {
-  font-size: 17px !important;
-  font-weight: bold !important;
+.l-main {
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
 }
 
-.title-row {
-  padding: 20px 0px;
+.l-header {
+  width: 100%;
+  height: 85px;
 }
 
-.content-slider-img {
-  background-image: url(test.jpg);
-  height: 300px;
-  width: inherit;
+.nav {
+  width: 100%;
+  height: 100%;
 }
 
-.no-padding {
-  padding: 0 !important;
+.nav .nav__left {
+  float: left;
+  height: 100%;
 }
 
-.content-slider-title {
-  color: white;
-  height: 200px;
-  position: absolute;
-  top: 100px;
-  background: linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.67));
-
-  h1 {
-    margin-top: 100px;
-    padding: 0px 20px;
-  }
+.nav .nav__center {
+  height: 100%;
+  display: inline;
 }
 
-.content-slider-info {
-  color: white;
-  position: absolute;
-  bottom: 5px;
-  padding: 0px 20px;
+.nav .nav__right {
+  float: right;
+  height: 100%;
+}
+
+.display-table {
+  display: table;
   width: 100%;
 
-  .count-view {
-    float: left;
-  }
-
-  .name {
-    float: right;
-  }
-}
-
-.list-cell {
-  padding: 10px 0px;
-  display: table;
-  .img {
-    width: 170px;
-    height: 120px;
+  .article {
     display: table-cell;
-    vertical-align: text-top;
-  }
-  .text {
-    display: table-cell;
-    padding-left: 20px;
-    vertical-align: text-top;
+    width: 33.3%;
+    position: relative;
+
+    .article__thumnail {
+      width: 100%;
+    }
+
+    .article__body {
+      position: absolute;
+      bottom: 40px;
+      width: 100%;
+      padding: 0 20px;
+
+      .article__body__bottoms {
+        .article__body__bottoms__right {
+          display: inline;
+          float: right;
+        }
+
+        .article__body__bottoms__left {
+          display: inline;
+          float: left;
+        }
+      }
+    }
   }
 }
 
-ul.no-point {
-  list-style: none;
+.articleTitle {
+  color: white;
 }
+
+.articleViewNum {
+  color: white;
+}
+
+.articleWriter {
+  color: white;
+}
+
+// .list-cell {
+//   padding: 10px 0px;
+//   display: table;
+//   .img {
+//     width: 170px;
+//     height: 120px;
+//     display: table-cell;
+//     vertical-align: text-top;
+//   }
+//   .text {
+//     display: table-cell;
+//     padding-left: 20px;
+//     vertical-align: text-top;
+//   }
+// }
+//
+// ul.no-point {
+//   list-style: none;
+// }
