--- a/app/assets/stylesheets/practices.scss
+++ b/app/assets/stylesheets/practices.scss
@@ -1,6 +1,7 @@
-// Place all the styles related to the Practices controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+/*
+  layout
+*/
 
 .l-wrap {
   width: 100%;
@@ -18,46 +19,80 @@
   height: 85px;
 }
 
-.nav {
-  width: 100%;
-  height: 100%;
+.l-mainWrap {
+  width: 1080px;
+  margin: 0 auto;
+  @extend .cf;
 }
 
-.nav .nav__left {
+.l-cont {
+  width: 70%;
+  float: left;
+}
+
+.l-side {
+  width: 30%;
+  float: right;
+}
+
+.l-footer {
+  margin-top: 30px;
+  width: 100%;
+}
+
+/*
+  header
+*/
+
+.header-nav {
+  width: 100%;
+  height: 85px;
+  @extend .cf;
+}
+
+.header__nav .header__nav__left {
   float: left;
   height: 100%;
 }
 
-.nav .nav__center {
-  height: 100%;
-  display: inline;
-}
-
-.nav .nav__right {
+.header__nav .header__nav__right {
   float: right;
   height: 100%;
+}
+
+.header__nav .header__nav__center {
+  height: 100%;
+  width: 140px;
+  margin: 0 auto;
 }
 
 .display-table {
   display: table;
   width: 100%;
+  height: 300px;
 
   .article {
     display: table-cell;
     width: 33.3%;
     position: relative;
+    height: 100%;
 
     .article__thumnail {
       width: 100%;
+      height: 100%;
     }
 
     .article__body {
       position: absolute;
       bottom: 40px;
       width: 100%;
+      height: 200px;
       padding: 0 20px;
 
       .article__body__bottoms {
+
+        @extend .cf;
+
         .article__body__bottoms__right {
           display: inline;
           float: right;
@@ -72,34 +107,290 @@
   }
 }
 
-.articleTitle {
+/*
+  content
+*/
+
+.pickup__list__cell {
+  padding: 10px 0;
+  @extend .cf;
+}
+
+.pickup__list__cell .pickup__list__cell__thumb {
+  float: left;
+}
+
+.pickup__list__cell .pickup__list__cell__body {
+  float: left;
+  width: 500px;
+  padding: 0 10px;
+}
+
+/*
+  side
+*/
+
+.area {
+  margin-bottom: 10px;
+  position: relative;
+}
+
+.area .area__list {
+  list-style: none;
+  @extend .cf;
+}
+
+.area .area__list .area__list__cell {
+  width: 50%;
+  float: left;
+}
+
+.area .area__link {
+  // position: absolute;
+  // right: 10px;
+}
+
+.tag {
+  margin-bottom: 10px;
+}
+
+.tag .tag__list {
+  list-style: none;
+  @extend .cf;
+}
+
+.tag .tag__list .tag__list__item {
+  float: left;
+}
+
+/*
+  rank
+*/
+
+.rank {
+  margin-bottom: 10px;
+}
+
+.rank .rank__list {
+  list-style: none;
+}
+
+.rank .rank__list .rank__list__item {
+  display: table;
+  padding: 10px 0;
+}
+
+.rank .rank__list .rank__list__item .rank__list__item__thumb {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.rank .rank__list .rank__list__item .rank__list__item__title {
+  display: table-cell;
+  vertical-align: middle;
+  padding-left: 20px;
+}
+
+/*
+  feature
+*/
+
+.feature {
+  margin-bottom: 10px;
+}
+
+.feature .feature__list {
+  list-style: none;
+}
+
+.feature .feature__list .feature__list__item {
+  display: table;
+  padding: 10px 0;
+}
+
+.feature .feature__list .feature__list__item .feature__list__item__thumb {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.feature .feature__list .feature__list__item .feature__list__item__title {
+  display: table-cell;
+  vertical-align: middle;
+  padding-left: 20px;
+}
+
+/*
+  recommend
+*/
+
+.recommend {
+  margin-bottom: 10px;
+}
+
+.recommend .recommend__list {
+  list-style: none;
+}
+
+.recommend .recommend__list .recommend__list__item {
+  display: table;
+  padding: 10px 0;
+}
+
+.recommend .recommend__list .recommend__list__item .recommend__list__item__thumb {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.recommend .recommend__list .recommend__list__item .recommend__list__item__title {
+  display: table-cell;
+  vertical-align: middle;
+  padding-left: 20px;
+}
+
+/*
+  follow
+*/
+
+.follow {
+}
+
+/*
+  footer
+*/
+
+.footer__induction {
+  width: 100%;
+  height: 235px;
+}
+
+.footer__induction .footer__induction__cont {
+  width: 1080px;
+  height: 230px;
+  margin: 0 auto;
+  @extend .cf;
+}
+
+.footer__induction .footer__induction__cont .footer__induction__cont__thumb {
+  float: left;
+}
+
+.footer__induction .footer__induction__cont .footer__induction__cont__body {
+  float: right;
+  width: 700px;
+}
+
+.footer__nav {
+  width: 1080px;
+  margin: 0 auto;
+  padding: 25px 30px 25px 25px;
+}
+
+.footer__nav .footer__nav__body {
+  @extend .cf;
+}
+
+.footer__nav .footer__nav__body .footer__nav__body__left {
+  float: left;
+  width: 560px;
+}
+
+.footer__nav .footer__nav__body .footer__nav__body__right {
+  float: left;
+  width: 520px;
+}
+
+.footer__nav .footer__nav__body .footer__nav__body__left .footer__nav__body__left__list {
+  list-style: none;
+  @extend .cf;
+}
+
+.footer__nav .footer__nav__body .footer__nav__body__right .footer__nav__body__right__list {
+  list-style: none;
+  @extend .cf;
+}
+
+.footer .footer__left {
+  float: left;
+}
+
+.footer .footer__copy {
+  float: left;
+}
+
+/*
+  component
+*/
+
+.verticalCenter {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.whiteText {
   color: white;
 }
 
-.articleViewNum {
-  color: white;
+.imageFilter {
+  background: linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.67));
 }
 
-.articleWriter {
-  color: white;
+.grayText {
+  font-size: 13px;
+  color: rgb(130, 130, 130);
 }
 
-// .list-cell {
-//   padding: 10px 0px;
-//   display: table;
-//   .img {
-//     width: 170px;
-//     height: 120px;
-//     display: table-cell;
-//     vertical-align: text-top;
-//   }
-//   .text {
-//     display: table-cell;
-//     padding-left: 20px;
-//     vertical-align: text-top;
-//   }
-// }
-//
-// ul.no-point {
-//   list-style: none;
-// }
+.areaLink {
+  font-size: 14px;
+}
+
+.tagLink {
+  font-size: 14px;
+}
+
+.rankTitle {
+  font-size: 14px;
+}
+
+.featureTitle {
+  font-size: 14px;
+}
+
+.featureLink {
+  font-size: 14px;
+}
+
+.recommendTitle {
+  font-size: 14px;
+}
+
+.glayBack {
+  background-color: #F9F9F9;
+}
+
+.footerNavLeftListItem {
+  float: left;
+  font-size: 12px;
+  padding-left: 20px;
+}
+
+.footerNavLeftRightItem {
+  width: 33.3%;
+  float: left;
+  font-size: 12px;
+}
+
+.footerNavTitle {
+  font-size: 13px;
+}
+
+/* For modern browsers */
+.cf:after {
+    content:"";
+    display:block;
+    clear: both;
+}
+
+/* For IE 6/7 (trigger hasLayout) */
+.cf {
+    zoom:1;
+}
