--- a/app/assets/stylesheets/practices.scss
+++ b/app/assets/stylesheets/practices.scss
@@ -44,64 +44,62 @@
   header
 */
 
-.header-nav {
+.header__nav {
   width: 100%;
   height: 85px;
-  @extend .cf;
-}
 
-.header__nav .header__nav__left {
-  float: left;
-  height: 100%;
-}
+  .header__nav__left {
+    float: left;
+    height: 100%;
+  }
 
-.header__nav .header__nav__right {
-  float: right;
-  height: 100%;
-}
+  .header__nav__right {
+    float: right;
+    height: 100%;
+  }
 
-.header__nav .header__nav__center {
-  height: 100%;
-  width: 140px;
-  margin: 0 auto;
+  .header__nav__center {
+    height: 100%;
+    width: 140px;
+    margin: 0 auto;
+  }
 }
 
 .display-table {
   display: table;
   width: 100%;
   height: 300px;
+}
 
-  .article {
-    display: table-cell;
-    width: 33.3%;
-    position: relative;
+.article {
+  display: table-cell;
+  width: 33.3%;
+  position: relative;
+  height: 100%;
+
+  .article__thumnail {
+    width: 100%;
     height: 100%;
+  }
 
-    .article__thumnail {
-      width: 100%;
-      height: 100%;
-    }
+  .article__body {
+    position: absolute;
+    bottom: 40px;
+    width: 100%;
+    height: 200px;
+    padding: 0 20px;
 
-    .article__body {
-      position: absolute;
-      bottom: 40px;
-      width: 100%;
-      height: 200px;
-      padding: 0 20px;
+    .article__body__bottoms {
+      @extend .cf;
 
-      .article__body__bottoms {
+      .article__body__bottoms__right {
+        display: inline;
+        float: right;
+      }
 
-        @extend .cf;
-
-        .article__body__bottoms__right {
-          display: inline;
-          float: right;
-        }
-
-        .article__body__bottoms__left {
-          display: inline;
-          float: left;
-        }
+      .article__body__bottoms__left {
+        display: inline;
+        float: left;
       }
     }
   }
@@ -111,19 +109,19 @@
   content
 */
 
-.pickup__list__cell {
+.pickup__list__item {
   padding: 10px 0;
   @extend .cf;
-}
 
-.pickup__list__cell .pickup__list__cell__thumb {
-  float: left;
-}
+  .pickup__list__item__thumb {
+    float: left;
+  }
 
-.pickup__list__cell .pickup__list__cell__body {
-  float: left;
-  width: 500px;
-  padding: 0 10px;
+  .pickup__list__item__body {
+    float: left;
+    width: 500px;
+    padding: 0 10px;
+  }
 }
 
 /*
@@ -133,125 +131,101 @@
 .area {
   margin-bottom: 10px;
   position: relative;
-}
 
-.area .area__list {
-  list-style: none;
-  @extend .cf;
-}
+  .area__list {
+    list-style: none;
+    @extend .cf;
 
-.area .area__list .area__list__cell {
-  width: 50%;
-  float: left;
-}
-
-.area .area__link {
-  // position: absolute;
-  // right: 10px;
+    .area__list__item {
+      width: 50%;
+      float: left;
+    }
+  }
 }
 
 .tag {
   margin-bottom: 10px;
-}
 
-.tag .tag__list {
-  list-style: none;
-  @extend .cf;
-}
+  .tag__list {
+    list-style: none;
+    @extend .cf;
 
-.tag .tag__list .tag__list__item {
-  float: left;
+    .tag__list__item {
+      float: left;
+    }
+  }
 }
-
-/*
-  rank
-*/
 
 .rank {
   margin-bottom: 10px;
-}
 
-.rank .rank__list {
-  list-style: none;
-}
+  .rank__list {
+    list-style: none;
 
-.rank .rank__list .rank__list__item {
-  display: table;
-  padding: 10px 0;
-}
+    .rank__list__item {
+      display: table;
+      padding: 10px 0;
 
-.rank .rank__list .rank__list__item .rank__list__item__thumb {
-  display: table-cell;
-  vertical-align: middle;
-}
+      .rank__list__item__thumb {
+        display: table-cell;
+        vertical-align: middle;
+      }
 
-.rank .rank__list .rank__list__item .rank__list__item__title {
-  display: table-cell;
-  vertical-align: middle;
-  padding-left: 20px;
+      .rank__list__item__title {
+        display: table-cell;
+        vertical-align: middle;
+        padding-left: 20px;
+      }
+    }
+  }
 }
-
-/*
-  feature
-*/
 
 .feature {
   margin-bottom: 10px;
-}
 
-.feature .feature__list {
-  list-style: none;
-}
+  .feature__list {
+    list-style: none;
 
-.feature .feature__list .feature__list__item {
-  display: table;
-  padding: 10px 0;
-}
+    .feature__list__item {
+      display: table;
+      padding: 10px 0;
 
-.feature .feature__list .feature__list__item .feature__list__item__thumb {
-  display: table-cell;
-  vertical-align: middle;
-}
+      .feature__list__item__thumb {
+        display: table-cell;
+        vertical-align: middle;
+      }
 
-.feature .feature__list .feature__list__item .feature__list__item__title {
-  display: table-cell;
-  vertical-align: middle;
-  padding-left: 20px;
+      .feature__list__item__title {
+        display: table-cell;
+        vertical-align: middle;
+        padding-left: 20px;
+      }
+    }
+  }
 }
-
-/*
-  recommend
-*/
 
 .recommend {
   margin-bottom: 10px;
-}
 
-.recommend .recommend__list {
-  list-style: none;
-}
+  .recommend__list {
+    list-style: none;
 
-.recommend .recommend__list .recommend__list__item {
-  display: table;
-  padding: 10px 0;
-}
+    .recommend__list__item {
+      display: table;
+      padding: 10px 0;
 
-.recommend .recommend__list .recommend__list__item .recommend__list__item__thumb {
-  display: table-cell;
-  vertical-align: middle;
-}
+      .recommend__list__item__thumb {
+        display: table-cell;
+        vertical-align: middle;
+      }
 
-.recommend .recommend__list .recommend__list__item .recommend__list__item__title {
-  display: table-cell;
-  vertical-align: middle;
-  padding-left: 20px;
-}
-
-/*
-  follow
-*/
-
-.follow {
+      .recommend__list__item__title {
+        display: table-cell;
+        vertical-align: middle;
+        padding-left: 20px;
+      }
+    }
+  }
 }
 
 /*
@@ -261,60 +235,62 @@
 .footer__induction {
   width: 100%;
   height: 235px;
-}
 
-.footer__induction .footer__induction__cont {
-  width: 1080px;
-  height: 230px;
-  margin: 0 auto;
-  @extend .cf;
-}
+  .footer__induction__cont {
+    width: 1080px;
+    height: 230px;
+    margin: 0 auto;
+    @extend .cf;
 
-.footer__induction .footer__induction__cont .footer__induction__cont__thumb {
-  float: left;
-}
+    .footer__induction__cont__thumb {
+      float: left;
+    }
 
-.footer__induction .footer__induction__cont .footer__induction__cont__body {
-  float: right;
-  width: 700px;
+    .footer__induction__cont__body {
+      float: right;
+      width: 700px;
+    }
+  }
 }
 
 .footer__nav {
   width: 1080px;
   margin: 0 auto;
   padding: 25px 30px 25px 25px;
+
+  .footer__nav__body {
+    @extend .cf;
+
+    .footer__nav__body__left {
+      float: left;
+      width: 560px;
+
+      .footer__nav__body__left__list {
+        list-style: none;
+        @extend .cf;
+      }
+    }
+
+    .footer__nav__body__right {
+      float: left;
+      width: 520px;
+
+      .footer__nav__body__right__list {
+        list-style: none;
+        @extend .cf;
+      }
+    }
+  }
 }
 
-.footer__nav .footer__nav__body {
-  @extend .cf;
-}
+.footer {
+  .footer__left {
+    float: left;
+  }
 
-.footer__nav .footer__nav__body .footer__nav__body__left {
-  float: left;
-  width: 560px;
-}
-
-.footer__nav .footer__nav__body .footer__nav__body__right {
-  float: left;
-  width: 520px;
-}
-
-.footer__nav .footer__nav__body .footer__nav__body__left .footer__nav__body__left__list {
-  list-style: none;
-  @extend .cf;
-}
-
-.footer__nav .footer__nav__body .footer__nav__body__right .footer__nav__body__right__list {
-  list-style: none;
-  @extend .cf;
-}
-
-.footer .footer__left {
-  float: left;
-}
-
-.footer .footer__copy {
-  float: left;
+  .footer__copy {
+    float: left;
+  }
 }
 
 /*
@@ -324,6 +300,11 @@
 .verticalCenter {
   display: table-cell;
   vertical-align: middle;
+}
+
+.frontTitle {
+  color: white;
+  font-size: 20px;
 }
 
 .whiteText {
