--- a/app/assets/stylesheets/practices.scss
+++ b/app/assets/stylesheets/practices.scss
@@ -1,3 +1,19 @@
+/*
+  global
+*/
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+ul {
+  padding-left: 0;
+}
 
 /*
   layout
@@ -26,12 +42,12 @@
 }
 
 .l-cont {
-  width: 70%;
+  width: 68%;
   float: left;
 }
 
 .l-side {
-  width: 30%;
+  width: 28%;
   float: right;
 }
 
@@ -50,56 +66,68 @@
 
   .header__nav__left {
     float: left;
-    height: 100%;
+    padding: 27px 0;
   }
 
   .header__nav__right {
     float: right;
-    height: 100%;
+    line-height: 85px;
   }
 
   .header__nav__center {
-    height: 100%;
     width: 140px;
     margin: 0 auto;
+    padding: 20px 0;
   }
 }
 
-.display-table {
+/*
+  front
+*/
+
+.front {
   display: table;
   width: 100%;
   height: 300px;
-}
 
-.article {
-  display: table-cell;
-  width: 33.3%;
-  position: relative;
-  height: 100%;
-
-  .article__thumnail {
-    width: 100%;
+  .front__article {
+    display: table-cell;
+    width: 33.3%;
+    position: relative;
     height: 100%;
-  }
 
-  .article__body {
-    position: absolute;
-    bottom: 40px;
-    width: 100%;
-    height: 200px;
-    padding: 0 20px;
+    .front__article__thumnail {
+      width: 100%;
+      .front__article__thumnail__img {
+        width: 100%;
+        height: 300px;
+      }
+    }
 
-    .article__body__bottoms {
-      @extend .cf;
+    .front__article__body {
+      position: absolute;
+      top: 100px;
+      width: 90%;
+      height: 200px;
+      padding: 0 5%;
 
-      .article__body__bottoms__right {
-        display: inline;
-        float: right;
+      .front__article__body__title {
+        position: absolute;
+        top: 100px;
       }
 
-      .article__body__bottoms__left {
-        display: inline;
-        float: left;
+      .front__article__body__bottoms {
+        @extend .cf;
+        position: absolute;
+        top: 160px;
+
+        .front__article__body__bottoms__right {
+          float: right;
+        }
+
+        .front__article__body__bottoms__left {
+          float: left;
+        }
       }
     }
   }
@@ -129,7 +157,7 @@
 */
 
 .area {
-  margin-bottom: 10px;
+  margin-bottom: 35px;
   position: relative;
 
   .area__list {
@@ -139,12 +167,28 @@
     .area__list__item {
       width: 50%;
       float: left;
+
+      .area__list__item__cont {
+        padding: 5px 0;
+        display: table;
+
+        .area__list__item__cont__thumb {
+          display: table-cell;
+          vertical-align: middle;
+        }
+
+        .area__list__item__cont__title {
+          display: table-cell;
+          vertical-align: middle;
+          padding-left: 10px;
+        }
+      }
     }
   }
 }
 
 .tag {
-  margin-bottom: 10px;
+  margin-bottom: 35px;
 
   .tag__list {
     list-style: none;
@@ -157,72 +201,81 @@
 }
 
 .rank {
-  margin-bottom: 10px;
+  margin-bottom: 35px;
 
   .rank__list {
     list-style: none;
 
     .rank__list__item {
-      display: table;
-      padding: 10px 0;
 
-      .rank__list__item__thumb {
-        display: table-cell;
-        vertical-align: middle;
-      }
+      .rank__list__item__cont {
+        display: table;
+        padding: 10px 0;
 
-      .rank__list__item__title {
-        display: table-cell;
-        vertical-align: middle;
-        padding-left: 20px;
+        .rank__list__item__cont__thumb {
+          display: table-cell;
+          vertical-align: middle;
+        }
+
+        .rank__list__item__cont__title {
+          display: table-cell;
+          vertical-align: middle;
+          padding-left: 20px;
+        }
       }
     }
   }
 }
 
 .feature {
-  margin-bottom: 10px;
+  margin-bottom: 35px;
 
   .feature__list {
     list-style: none;
 
     .feature__list__item {
-      display: table;
-      padding: 10px 0;
 
-      .feature__list__item__thumb {
-        display: table-cell;
-        vertical-align: middle;
-      }
+      .feature__list__item__cont {
+        display: table;
+        padding: 10px 0;
 
-      .feature__list__item__title {
-        display: table-cell;
-        vertical-align: middle;
-        padding-left: 20px;
+        .feature__list__item__cont__thumb {
+          display: table-cell;
+          vertical-align: middle;
+        }
+
+        .feature__list__item__cont__title {
+          display: table-cell;
+          vertical-align: middle;
+          padding-left: 20px;
+        }
       }
     }
   }
 }
 
 .recommend {
-  margin-bottom: 10px;
+  margin-bottom: 35px;
 
   .recommend__list {
     list-style: none;
 
     .recommend__list__item {
-      display: table;
-      padding: 10px 0;
 
-      .recommend__list__item__thumb {
-        display: table-cell;
-        vertical-align: middle;
-      }
+      .recommend__list__item__cont {
+        display: table;
+        padding: 10px 0;
 
-      .recommend__list__item__title {
-        display: table-cell;
-        vertical-align: middle;
-        padding-left: 20px;
+        .recommend__list__item__cont__thumb {
+          display: table-cell;
+          vertical-align: middle;
+        }
+
+        .recommend__list__item__cont__title {
+          display: table-cell;
+          vertical-align: middle;
+          padding-left: 20px;
+        }
       }
     }
   }
@@ -302,9 +355,22 @@
   vertical-align: middle;
 }
 
-.frontTitle {
-  color: white;
+.articleTitle {
   font-size: 20px;
+  font-weight: bold;
+  margin-top: 0;
+}
+
+.subTitle {
+  font-size: 18px;
+  font-weight: bold;
+  border-bottom: solid 1px black;
+  margin: 0;
+  padding: 32px 0 10px;
+}
+
+.listItemFrame {
+  border-bottom: solid 1px rgb(230, 230, 230);
 }
 
 .whiteText {
