--- a/app/assets/stylesheets/practices.scss
+++ b/app/assets/stylesheets/practices.scss
@@ -66,12 +66,13 @@ ul {
 
   .header__nav__left {
     float: left;
-    padding: 27px 0;
+    padding: 27px 0 27px 35px;
   }
 
   .header__nav__right {
     float: right;
     line-height: 85px;
+    padding-right: 25px;
   }
 
   .header__nav__center {
@@ -98,6 +99,7 @@ ul {
 
     .front__article__thumnail {
       width: 100%;
+
       .front__article__thumnail__img {
         width: 100%;
         height: 300px;
@@ -118,6 +120,7 @@ ul {
 
       .front__article__body__bottoms {
         @extend .cf;
+        width: 90%;
         position: absolute;
         top: 160px;
 
@@ -138,7 +141,7 @@ ul {
 */
 
 .pickup__list__item {
-  padding: 10px 0;
+  padding: 20px 0;
   @extend .cf;
 
   .pickup__list__item__thumb {
@@ -196,6 +199,7 @@ ul {
 
     .tag__list__item {
       float: left;
+      margin-right: 20px;
     }
   }
 }
@@ -428,6 +432,19 @@ ul {
 
 .footerNavTitle {
   font-size: 13px;
+}
+
+.circleImage {
+  border-radius: 50%;
+}
+
+.searchBox {
+  background-color: #fafafa;
+  border-radius: 5px;
+  font-size: 12px;
+  padding: 5px 40px 5px 10px;
+  outline: 0;
+  border: 0px;
 }
 
 /* For modern browsers */
