--- a/app/assets/stylesheets/practices.scss
+++ b/app/assets/stylesheets/practices.scss
@@ -12,7 +12,8 @@ a:hover {
 }
 
 ul {
-  padding-left: 0;
+  padding: 0;
+  margin: 0;
 }
 
 /*
@@ -99,12 +100,19 @@ ul {
   }
 }
 
+// .articleBig:hover {
+//   opacity: 0.7;
+// }
 .articleBig {
   background-image: url(test.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   height: 300px;
   width: 100%;
+
+  &:hover {
+    opacity: 0.7;
+  }
 
   .articleBig__body {
     position: absolute;
@@ -227,7 +235,7 @@ ul {
 }
 
 .areaSmall {
-  padding: 5px 0;
+  padding: 10px 0;
   display: table;
 
   .areaSmall__thumb {
@@ -244,7 +252,7 @@ ul {
 
 .articleSmall {
   display: table;
-  padding: 10px 0;
+  padding: 18px 0;
 
   .articleSmall__thumb {
     display: table-cell;
@@ -254,7 +262,7 @@ ul {
   .articleSmall__title {
     display: table-cell;
     vertical-align: middle;
-    padding-left: 20px;
+    padding-left: 15px;
   }
 }
 
@@ -414,6 +422,13 @@ ul {
   padding: 5px 40px 5px 10px;
   outline: 0;
   border: 0px;
+}
+
+.linkImage {
+  display: block;
+}
+.linkImage:hover {
+  opacity: 0.7;
 }
 
 /* For modern browsers */
