--- a/app/assets/stylesheets/practices.scss
+++ b/app/assets/stylesheets/practices.scss
@@ -14,6 +14,7 @@ a:hover {
 ul {
   padding: 0;
   margin: 0;
+  list-style: none;
 }
 
 /*
@@ -34,6 +35,10 @@ ul {
 .l-header {
   width: 100%;
   height: 85px;
+}
+
+.l-front {
+  margin-bottom: 10px;
 }
 
 .l-mainWrap {
@@ -173,7 +178,6 @@ ul {
   position: relative;
 
   .area__list {
-    list-style: none;
     @extend .cf;
 
     .area__list__item {
@@ -188,7 +192,6 @@ ul {
   margin-bottom: 35px;
 
   .tag__list {
-    list-style: none;
     @extend .cf;
 
     .tag__list__item {
@@ -202,8 +205,6 @@ ul {
   margin-bottom: 35px;
 
   .rank__list {
-    list-style: none;
-
     .rank__list__item {
       @extend .listItemFrame;
     }
@@ -214,8 +215,6 @@ ul {
   margin-bottom: 35px;
 
   .feature__list {
-    list-style: none;
-
     .feature__list__item {
       @extend .listItemFrame;
     }
@@ -226,8 +225,6 @@ ul {
   margin-bottom: 35px;
 
   .recommend__list {
-    list-style: none;
-
     .recommend__list__item {
       @extend .listItemFrame;
     }
@@ -304,7 +301,6 @@ ul {
       width: 560px;
 
       .footer__nav__body__left__list {
-        list-style: none;
         @extend .cf;
       }
     }
@@ -314,7 +310,6 @@ ul {
       width: 520px;
 
       .footer__nav__body__right__list {
-        list-style: none;
         @extend .cf;
       }
     }
@@ -414,21 +409,68 @@ ul {
 .circleImage {
   border-radius: 50%;
 }
+.searchForm {
+  width: 220px;
 
-.searchBox {
-  background-color: #fafafa;
-  border-radius: 5px;
-  font-size: 12px;
-  padding: 5px 40px 5px 10px;
-  outline: 0;
-  border: 0px;
+  .searchForm__input {
+    width: 100%;;
+    height: 30px;
+    position: relative;
+
+    .searchForm__input__form {
+      .searchForm__input__form__text {
+        width: 220px;
+        height: 30px;
+        box-sizing: border-box;
+        padding: 0 30px 0 10px;
+        background-color: #fafafa;
+        border-radius: 5px;
+        font-size: 12px;
+        outline: 0;
+        border: 0px;
+        &:focus {
+          background-color: rgb(238, 238, 238);
+        }
+      }
+      .searchForm__input__form__button {
+        width: 30px;
+        position: absolute;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background-image: url(test.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        border: 0;
+      }
+    }
+  }
+
+  .searchForm__candidates {
+    width: 220px;
+    position: absolute;
+    top: 60px;
+    background-color: rgb(250, 250, 250);
+    .searchForm__candidates__item {
+      .searchForm__candidates__item__title {
+        width: 100%;
+        box-sizing: border-box;
+        padding-left: 20px;
+      }
+    }
+  }
+
 }
 
 .linkImage {
   display: block;
+  &:hover {
+    opacity: 0.7;
+  }
 }
-.linkImage:hover {
-  opacity: 0.7;
+
+.hide {
+  display: none;
 }
 
 /* For modern browsers */
